# hydrasdr-host

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/modules/: FindLIBUSB.cmake
debian/: changelog  control  copyright  rules
hydrasdr-tools/: CMakeLists.txt  LICENSE.md  README.md  hydrasdr_calibration_procedure.md  hydrasdr_troubleshooting.md
hydrasdr-tools/src/: CMakeLists.txt  cpu_features.c  cpu_features.h  hydrasdr_api_benchmark.c  hydrasdr_async_rx.c  hydrasdr_calibrate.c  hydrasdr_clockgen.c  hydrasdr_ddc_benchmark.c  hydrasdr_gpio.c  hydrasdr_gpiodir.c  hydrasdr_info.c  hydrasdr_lib_version.c  hydrasdr_list_devices.c  hydrasdr_r82x.c  hydrasdr_reset.c  hydrasdr_rf_frontend.c  hydrasdr_rx.c  hydrasdr_set_rf_port.c  hydrasdr_si5351c.c  hydrasdr_spiflash.c
libhydrasdr/: CMakeLists.txt  LICENSE.md  README.md
libhydrasdr/src/: CMakeLists.txt  buffer_pool.h  compat_opt.h  filters.h  filters_opt.h  hydrasdr.c  hydrasdr.h  hydrasdr_commands.h  hydrasdr_internal.h  hydrasdr_rfone.c  hydrasdr_shared.c  hydrasdr_shared.h  iqconverter.c  iqconverter.h  iqconverter_common.h  iqconverter_decimator.c  iqconverter_decimator.h  iqconverter_float_opt.c  iqconverter_float_opt.h  iqconverter_float_opt33.c  iqconverter_float_opt33.h  iqconverter_float_opt65.c  iqconverter_float_opt65.h  iqconverter_float_opt83.c  iqconverter_float_opt83.h  iqconverter_float_opt_dec.c  iqconverter_float_opt_dec.h  iqconverter_int16.c  iqconverter_int16_opt.c  iqconverter_int16_opt.h  iqconverter_int16_opt33.c  iqconverter_int16_opt33.h  iqconverter_int16_opt65.c  iqconverter_int16_opt65.h  iqconverter_int16_opt83.c  iqconverter_int16_opt83.h  iqconverter_int16_opt_dec.c  iqconverter_int16_opt_dec.h  iqconverter_lut.c  iqconverter_lut.h  (+2 more)
libhydrasdr/src/win32/: hydrasdr.rc
testing/: Dockerfile.archlinux  Dockerfile.debian  Dockerfile.fedora  Dockerfile.opensuse
